# Tetris

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  compile_flags.txt
scripts/: build.sh  debug.sh  run.sh  valgrind.sh
src/: main.c  window.c  window.h
